Fix some random grammar and spelling errors throughout website and made some small spacing fixes to the admonition.

--- a/apps/website/src/styles/globals.scss
+++ b/apps/website/src/styles/globals.scss
@@ -71,6 +71,7 @@ header#nd-subnav {
 mjx-container[jax="CHTML"][display="true"] {
   font-size: 1.15rem;
   overflow-x: auto;
+
   mjx-labels {
     mjx-itable {
       font-size: 1rem !important;
@@ -85,6 +86,7 @@ mjx-container[jax="CHTML"][display="true"] {
     overflow-y: hidden;
     min-width: 0px !important;
     min-height: fit-content;
+
     mjx-labels {
       mjx-itable {
         font-size: 1rem !important;
@@ -112,6 +114,7 @@ a[data-active="true"] {
   * {
     color: hsl(var(--primary)) !important;
   }
+
   mjx-container {
     color: hsl(var(--primary));
   }
@@ -121,5 +124,11 @@ a[data-active="true"] {
   ol,
   ul {
     margin: 0;
+  }
+}
+
+.admonition.success {
+  .title {
+    background-color: #22c55e !important;
   }
 }
